[tool.poetry]
name = "cosmic-python"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <markus.iorio@centralnic.com>"]
readme = "README.md"
packages = [{include = "cosmic_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
